2008-11-11  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/driver/pxljr.xml: Mentioned in the text that a patch
	  for the color output bug is available.

2008-11-05  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint52.xml, driver/gutenprint.xml: Removed old
	  "gutenprint" entry and renamed the "gutenprint52" entry to
	  reflect the final release of Gutenprint 5.2.1. Also updated the
	  text and the printer list of the driver entry.

	* driver/splix.xml, driver/splix2.xml: Adjusted package links for
	  renamed packages.

2008-11-01  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript-HP.xml: Made user support link and text the
	  same as in the entry for the "hpijs" driver. This shows also
	  that a bug tracking system is available.

2008-10-30  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript-Brother.xml, driver/Postscript-Epson.xml,
	  driver/Postscript-Gestetner.xml, driver/Postscript-Infotec.xml,
	  driver/Postscript-KONICA_MINOLTA.xml,
	  driver/Postscript-Kyocera.xml, driver/Postscript-Lanier.xml,
	  driver/Postscript-NRG.xml, driver/Postscript-Oce.xml,
	  driver/Postscript-Oki.xml, driver/Postscript-Ricoh.xml,
	  driver/Postscript-Savin.xml, driver/Postscript-Sharp.xml,
	  driver/Postscript-Toshiba.xml, driver/pxlcolor-Gestetner.xml,
	  driver/pxlcolor-Infotec.xml, driver/pxlcolor-Lanier.xml,
	  driver/pxlcolor-NRG.xml, driver/pxlcolor-Ricoh.xml,
	  driver/pxlcolor-Savin.xml, driver/pxlmono-Gestetner.xml,
	  driver/pxlmono-Infotec.xml, driver/pxlmono-Lanier.xml,
	  driver/pxlmono-NRG.xml, driver/pxlmono-Ricoh.xml,
	  driver/pxlmono-Savin.xml: Added mask to assign the new PPD
	  packages to these driver entries.

	* PPD/Sharp/Sharp-MX-2300G-ps-jp.ppd,
	  PPD/Sharp/Sharp-MX-2700G-ps-jp.ppd,
	  PPD/Sharp/Sharp-MX-3500N-ps-jp.ppd,
	  PPD/Sharp/Sharp-MX-3501N-ps-jp.ppd,
	  PPD/Sharp/Sharp-MX-4500N-ps-jp.ppd,
	  PPD/Sharp/Sharp-MX-4501N-ps-jp.ppd, printer/Sharp-MX-2300G.xml,