@@ -33,7 +33,7 @@
     </usb>
   </autodetect>
   <functionality>B</functionality>
-  <driver>hpijs</driver>
+  <driver>pxljr</driver>
   <!--verified-->
   <!--no "contrib_url"-->
   <comments>
