@@ -28,7 +28,7 @@
     </snmp>
   </autodetect>
   <functionality>B</functionality>
-  <driver>hpijs</driver>
+  <driver>pxljr</driver>
   <!--verified-->
   <!--no "contrib_url"-->
   <comments>
