@@ -1,7 +1,12 @@
 2008-11-11  Till Kamppeter <till.kamppeter@gmail.com>
 
-	* db/source/driver/pxljr.xml: Mentioned in the text that a patch
-	  for the color output bug is available.
+	* printer/HP-Color_LaserJet_3500.xml,
+	  printer/HP-Color_LaserJet_3550.xml,
+	  printer/HP-Color_LaserJet_3600.xml: Set recommended driver back
+	  to "pxljr" as now all known bugs in the driver are fixed.
+
+	* driver/pxljr.xml: Mentioned in the text that a patch for the
+	  color output bug is available.
 
 2008-11-05  Till Kamppeter <till.kamppeter@gmail.com>
 
